--- a/login.html
+++ b/login.html
@@ -14,23 +14,23 @@
   <body>
     <div id="app">
       <div class="container">
-        <div class="row justify-content-center section">
+        <div class="row justify-content-center">
           <h1 class="h3 mb-3 font-weight-normal">
             請先登入
           </h1>
           <div class="col-8">
-            <form id="form" class="form-signin" ＠submit.prevent="login">
+            <form class="form-signin" @submit.prevent="login">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="username"
+                <input type="email" class="form-control" v-model="user.username" id="floatingInput"
                   placeholder="name@example.com" required autofocus>
-                <label for="username">Email address</label>
+                <label for="floatingInput">Email address</label>
               </div>
               <div class="form-floating">
-                <input type="password" class="form-control" id="password"
+                <input type="password" class="form-control" v-model="user.password" id="floatingPassword"
                   placeholder="Password" required>
-                <label for="password">Password</label>
+                <label for="floatingPassword">Password</label>
               </div>
-              <button class="btn btn-lg btn-primary w-100 mt-3" type="submit" id="login">
+              <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">
                 登入
               </button>
             </form>
@@ -51,8 +51,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"></script>
-    <script src="js/config.js"></script>
-    <script src="js/login.js"></script>
+      <script src="js/config.js"></script>
+     <script src="js/login.js" type="module"></script>
   </body>
-
 </html>
