--- a/product.html
+++ b/product.html
@@ -127,6 +127,8 @@
       </nav>
     </script>
 
+
+    <!-- productModal -->
     <script type="text/x-template" id="productModal">
       <div id="productModal" ref="modal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel"
         aria-hidden="true">
